--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                         <nav>
                                             <ul id="navigation">                                                                                          
                                                 <li class="active" ><a href="#">Asosiy</a></li>
-                                                <li><a href="#">Kurslar</a></li>
+                                                <li><a href="#kurslar">Kurslar</a></li>
                                                 <li><a href="#">Portfolio</a></li>
                                                 <li><a href="#">Resourslar</a>
                                                     <ul class="submenu">
@@ -156,6 +156,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                            <a name="kurslar"></a>
                             <h2>Bizning kurslar</h2>
                         </div>
                     </div>
@@ -310,7 +311,7 @@
                     <div class="section-tittle section-tittle2 mb-55">
                         <div class="front-text">
                             <h2 class="">Biz sizlar bilan bilimlarni ulashishni istaymiz!</h2>
-                            <p>Agar siz hayotingizni yanada yaxshilashga va muvaffaqiyatga erishishni hoxlasangiz zamonaviy bilimlarni o'rganishni boshlang...</p>
+                            <p>Agar siz hayotingizni yanada yaxshilashni va muvaffaqiyatga erishishni hoxlasangiz zamonaviy bilimlarni o'rganishni boshlang...</p>
                         </div>
                     </div>
                     <div class="single-features">
@@ -615,14 +616,17 @@
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>The automated process starts as soon as your clothes go into the machine.</p>
+                                        <p>Bizning jamoada bilim oling va jamiyatimiz rivojlanishiga o'z hissangizni qo'shing.</p>
                                     </div>
                                 </div>
                                 <!-- social -->
                                 <div class="footer-social">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="https://twitter.com/HelloComputer3"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=100083774786795"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.pinterest.com/hellocomputeruz/"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="https://www.youtube.com/channel/UCFwC4uw-zBgWfon97T4k8zg"><i class="fab fa-youtube"></i></a>
+                                    <a href="https://www.instagram.com/hellocomputer.uz/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/hellocomputer.uz/"><i class="fab fa-telegram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -630,13 +634,13 @@
                     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Our solutions</h4>
+                                <h4>Bizning sayt</h4>
                                 <ul>
-                                    <li><a href="#">Design & creatives</a></li>
-                                    <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
-                                    <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">Asosiy</a></li>
+                                    <li><a href="#kurslar">Kurslar</a></li>
+                                    <li><a href="#">Portfolio</a></li>
+                                    <li><a href="#">Resourslar</a></li>
+                                    <li><a href="#">Web saytlar</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -644,18 +648,18 @@
                     <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Support</h4>
+                                <h4>Bizning xizmatlar</h4>
                                 <ul>
-                                    <li><a href="#">Design & creatives</a></li>
-                                    <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
-                                    <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">Microsoft Office</a></li>
+                                    <li><a href="#">Grafik dizayn</a></li>
+                                    <li><a href="#">SMM</a></li>
+                                    <li><a href="#">Web sayt</a></li>
+                                    <li><a href="#">Book printing</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+                    <!-- <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
                                 <h4>Company</h4>
@@ -668,7 +672,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -680,7 +684,7 @@
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
                                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                  Jizzax &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-code" aria-hidden="true"></i> by <a href="https://myurls.co/hellocomputer1" target="_blank">Hello Computer Team</a>
+                                  Jizzax &copy;<script>document.write(new Date().getFullYear());</script> Sayt tuzuvchilari <i class="fa fa-code" aria-hidden="true"></i> <a href="https://myurls.co/hellocomputer1" target="_blank">Hello Computer Jamoasi</a>
                                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                               </div>
                           </div>
