--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/HC logo6.png">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -63,12 +63,12 @@
                                                 <li class="active" ><a href="#">Asosiy</a></li>
                                                 <li><a href="#kurslar">Kurslar</a></li>
                                                 <li><a href="#">Portfolio</a></li>
-                                                <li><a href="#">Resourslar</a>
-                                                    <ul class="submenu">
+                                                <li><a href="#">Manbalar</a>
+                                                    <!-- <ul class="submenu">
                                                         <li><a href="#">Maqolalar</a></li>
-                                                        <li><a href="#">Linklar</a></li>
-                                                        <li><a href="#">IT yordam</a></li>
-                                                    </ul>
+                                                        <li><a href="#">Havolalar</a></li>
+                                                        <li><a href="#">Savol-javob</a></li>
+                                                    </ul> -->
                                                 </li>
                                                 <li><a href="https://www.seelink.app/Rasuljon/Qyt6LAc3N5eksSF3if9Luj" target="_blank" >Web saytlar</a></li>
                                                 <!-- Button -->
@@ -120,7 +120,7 @@
                                 <img src="assets/img/icon/icon1.svg" alt="">
                             </div>
                             <div class="features-caption">
-                                <h3>100+ IT resourslar</h3>
+                                <h3>100+ IT manbalar</h3>
                                 <p>Internet olamidagi eng foydali resourslar bilan tanishasiz!</p>
                             </div>
                         </div>
