--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
                         <img src="assets/img/gallery/about.png" alt="">
 
                         <div class="video-icon" >
+                            <iframe src="https://free.timeanddate.com/clock/i8gv1nzz/n4061/szw110/szh110/hocfff/hbw0/cf100/hgr0/fas12/fdi86/mqc222/mqs2/mql3/mqw4/mqd70/mhc222/mhs2/mhl3/mhw4/mhd70/mmv0/hhs3/hms3/hsc009" frameborder="0" width="110" height="110"></iframe>
+
                             <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=KBqvbppjvkU"><i class="fas fa-play"></i></a>
                         </div>
                     </div>
