--- a/index.html
+++ b/index.html
@@ -536,14 +536,14 @@
                             <p>Graphic designer</p>
                         </div>
                      </div>
-                    <div class="single-cat text-center">
+                    <!-- <div class="single-cat text-center">
                         <div class="cat-icon">
                             <img src="assets/img/gallery/TeamPicture2.png" alt="">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Lochinbek <br> Abduvoitov</a></h5>
                             <p>Web dasturchi</p>
-                        </div>
+                        </div> -->
                     <!-- </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
